[package]
name = "fgr"
version = "0.3.0"
edition = "2018"
repository = "https://github.com/clinuxrulz/fgr4rs"
description = "Fine-grained reactivity for Rust"
license = "BSD-3-Clause"
keywords = ["reactive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
